hphp/hack/test/analyze/list_logger/logs/misc_basic.php
<?hh

function test_misc(vec_or_dict<int, string> $x): void {
  list($a, $b) = $x;
}
